--- a/index.html
+++ b/index.html
@@ -9,6 +9,20 @@
     <title>Document</title>
 </head>
 <body>
- <h1>Hello world</h1>
+ <nav id="navbar">
+     <a href="#projects"  >projects</a>
+     <a href="#welcome-section"  >welcome section</a>
+ </nav>
+ <section id="welcome-section">
+     <h1 >Welcome to my portfolio page</h1>
+ </section>
+<section id="projects">
+    <div class="project-tile"></div>
+    <div>
+        <h1 href="project1.html">Project One</h1>
+
+    </div>
+</section>
+ <a href="https://github.com/bigmosi/portfolio.git/" target="_blank" id="profile-link">My Github</a>
 </body>
 </html>
